power: Avoid possible criticals on startup

The screensaver (gnome-shell) might not be ready when we start up,
which would mean ending up without a working screensaver proxy,
or gnome-shell might restart, making our proxy invalid.

Ensure that doesn't happen by watching the screensaver name.

https://bugzilla.gnome.org/show_bug.cgi?id=692321